[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Assignments/StudentAttempt.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Assignments/background_desert.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Assignments/MenuBG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Quiz/medium.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Assignments/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background_desert" parent="." instance=ExtResource( 2 )]
position = Vector2( 351.58, 552.669 )
scale = Vector2( 1.00899, 1.02374 )

[node name="Panel" type="Panel" parent="."]

[node name="MenuBG" parent="Panel" instance=ExtResource( 3 )]
position = Vector2( 284.257, 529.074 )
scale = Vector2( 0.608704, 0.610447 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MenuBG"]
margin_left = -286.0
margin_top = -482.0
margin_right = 415.0
margin_bottom = 361.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MenuBG/ScrollContainer"]
custom_constants/separation = 150

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Submit" type="Button" parent="."]
margin_left = 367.38
margin_top = 822.028
margin_right = 2453.38
margin_bottom = 1529.03
rect_scale = Vector2( 0.066898, 0.0602566 )
icon = ExtResource( 4 )
flat = true

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = 77.6269
margin_top = 172.678
margin_right = 790.627
margin_bottom = 879.678

[node name="Label" type="Label" parent="."]
margin_left = 141.228
margin_top = 171.185
margin_right = 521.228
margin_bottom = 224.185
custom_fonts/font = SubResource( 1 )
text = "Assignment Attempt"

[node name="Label2" type="Label" parent="."]
margin_left = 122.128
margin_top = 814.818
margin_right = 473.128
margin_bottom = 923.818
rect_scale = Vector2( 0.43475, 0.43475 )
custom_fonts/font = SubResource( 1 )
text = " \"Enter\" when done."

[node name="Label3" type="Label" parent="."]
margin_left = 404.577
margin_top = 829.515
margin_right = 755.577
margin_bottom = 938.515
rect_scale = Vector2( 0.43475, 0.43475 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "submit"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 120.186
margin_top = 838.181
margin_right = 282.186
margin_bottom = 871.181
placeholder_text = "Answer for one Question"

[node name="Notification" type="Label" parent="."]
margin_left = 120.0
margin_top = 764.0
margin_right = 498.0
margin_bottom = 804.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
